profile + header link update

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -26,6 +26,11 @@
                 margin-right: 0px;
             }
 
+            .profile-intro-section {
+                display:flex;
+                flex-direction: column;
+            }
+
             h1 {
                 margin-left: 0px;
                 color: antiquewhite;
@@ -41,6 +46,12 @@
 
             .title-text-3 {
                 margin-left: 10px;
+            }
+
+            .profile-underscript {
+                color: rgb(173, 163, 148);
+                margin-top: 20px;
+                margin-left: 15px;
             }
 
         </style>
@@ -61,7 +72,7 @@
                     <a class="button-navigation" style="color: rgba(255, 0, 0, 0.784);">
                         Home
                     </a>
-                    <a href="/home" class="button-navigation">
+                    <a href="/eutrcapp" class="button-navigation">
                         EUTRC App
                     </a>
                 </div>
@@ -78,15 +89,21 @@
             >
             </div>
 
-            
-            <h1>
-                <strong>
-                    Jr.<br>
-                    <span class="title-text-2">Solutions<br></span>
-                    <span class="title-text-3">Architect<br></span>
-                </strong>
+            <div class="profile-intro-section">
+                <h1>
+                    <strong>
+                        Jr.<br>
+                        <span class="title-text-2">Solutions<br></span>
+                        <span class="title-text-3">Architect<br></span>
+                    </strong>
+                </h1>
 
-            </h1>
+                <span class="profile-underscript">
+                    Ethan de Villiers
+                </span>
+            </div>
+
+            
         </div>
 
         <footer class="footer">
