--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -37,10 +37,10 @@
         </h1>
 
         <div class="app-gallery">
-            <a href="ttt.app">
+            <a href="eutrcapp.app">
                 <img class="app-logo" src="/website images/eutrc app/playstoreicon.png" alt="The EUTRC App Logo">
             </a>
-            <a class="webapp-redirect-text" href="ttt.app">
+            <a class="webapp-redirect-text" href="eutrcapp.app">
                 Click the logo for the webapp
             </a> 
             <a href="">
