body-margin updates

--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" href="/eutrcapp/eutrcapp.css">
 
     </head>
-    <body style="background-color: #121212;">
+    <body 
+        style="background-color: #121212;
+            margin-top: 0px;
+            margin-bottom: 0px;"
+    >
         <header>
             <div class="header">
 
