--- a/public/home/home.html
+++ b/public/home/home.html
@@ -57,7 +57,11 @@
         </style>
 
     </head>
-    <body style="background-color: #121212;">
+    <body 
+        style="background-color: #121212;
+            margin-top: 0px;
+            margin-bottom: 0px;"
+    >
         <header>
             <div class="header">
 
