--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -11,7 +11,8 @@
     <body 
         style="background-color: #121212;
             margin-top: 0px;
-            margin-bottom: 0px;"
+            margin-bottom: 0px;
+            width: 100%;"
     >
         <header>
             <div class="header">
