--- a/public/home/home.html
+++ b/public/home/home.html
@@ -60,7 +60,8 @@
     <body 
         style="background-color: #121212;
             margin-top: 0px;
-            margin-bottom: 0px;"
+            margin-bottom: 0px;
+            width: 100%;"
     >
         <header>
             <div class="header">
