--- a/public/home/home.html
+++ b/public/home/home.html
@@ -139,7 +139,7 @@
                         class="footer-ttt-icon">
                     </a>
                     <a 
-                        href="/privacy" 
+                        href="/eutrcapp/privacy" 
                         class="footer-privacy-link"
                     >
                         Privacy Policy
