/home href footer fix

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -124,7 +124,7 @@
                     class="footer-github-icon">
                 </a>
                
-                <a href="home">
+                <a href="/home">
                     <img 
                     src="/website images/mb_logo.png" 
                     alt="MegaBytten productions Logo"
