advanced dropdown header /home

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -73,17 +73,12 @@
                     
                 </div>
 
-                <!--  -->
-
-<!-- -->
-
                 <div class="right-header-section">
                     <a class="button-navigation" style="color: rgba(255, 0, 0, 0.784);">
                         Home
                     </a>
 
-                    <!-- DROPDOWN FOR EUTRCAPP -->
-                    <div class="dropdown">
+                    <div>
                         <button class="dropbtn">EUTRC App</button>
                         <div class="dropdown-content">
                           <a href="/eutrc.app">APP</a>
@@ -91,10 +86,6 @@
                           <a href="/eutrcapp/privacy">Privacy Policy</a>
                         </div>
                       </div>
-
-                    <a href="/eutrcapp" class="button-navigation">
-                        EUTRC App
-                    </a>
                 </div>
             </div>
             
