--- a/public/home/home.html
+++ b/public/home/home.html
@@ -78,7 +78,7 @@
                         Home
                     </a>
 
-                    <div>
+                    <div class="dropdown">
                         <button class="dropbtn">EUTRC App</button>
                         <div class="dropdown-content">
                           <a href="/eutrc.app">APP</a>
