--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -28,9 +28,19 @@
                     <a href="/home" class="button-navigation">
                         Home
                     </a>
-                    <a class="button-navigation" style="color: rgba(255, 0, 0, 0.784);">
-                        EUTRC app
-                    </a>
+                    <div class="dropdown">
+                        <button 
+                            class="dropbtn"
+                            style="color: rgba(255, 0, 0, 0.784);"
+                        >
+                            EUTRC App
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="/eutrc.app">APP</a>
+                          <a href="/eutrcapp">About</a>
+                          <a href="/eutrcapp/privacy">Privacy Policy</a>
+                        </div>
+                      </div>
                 </div>
             </div>
             
