--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -37,7 +37,7 @@
                         </button>
                         <div class="dropdown-content">
                           <a href="/eutrc.app">APP</a>
-                          <a href="/eutrcapp">About</a>
+                          <a>About</a>
                           <a href="/eutrcapp/privacy">Privacy Policy</a>
                         </div>
                       </div>
