forgot to rename <link stylesheet

--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/common styles/header.css">
         <link rel="stylesheet" href="/common styles/footer.css">
 
-        <link rel="stylesheet" href="/eutrcapp/eutrcapp.css">
+        <link rel="stylesheet" href="/eutrcapp/about.css">
 
     </head>
     <body 
