--- a/public/home/home.html
+++ b/public/home/home.html
@@ -83,6 +83,7 @@
                         <div class="dropdown-content">
                           <a href="/eutrc.app">APP</a>
                           <a href="/eutrcapp">About</a>
+                          <a href="/eutrcapp#downloads">Downloads</a>
                           <a href="/eutrcapp/privacy">Privacy Policy</a>
                         </div>
                       </div>
