--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -38,6 +38,7 @@
                         <div class="dropdown-content">
                           <a href="/eutrc.app">APP</a>
                           <a>About</a>
+                          <a href="/eutrcapp#downloads">Downloads</a>
                           <a href="/eutrcapp/privacy">Privacy Policy</a>
                         </div>
                       </div>
@@ -91,10 +92,10 @@
         </div>
 
         <div class="downloads-section">
-            <h2>
-                Downloads
-            </h2>
-
+            <a id="downloads">
+                <h2> Downloads</h2>
+            </a>
+           
             <h3 style="margin-bottom: 0px;">
                 Version History (.aab) 
             </h3>
