--- a/public/eutrcapp/privacy.html
+++ b/public/eutrcapp/privacy.html
@@ -1,62 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MegaBytten</title>
+        <title>Privacy Policy</title>
         <link rel="stylesheet" href="/common styles/header.css">
         <link rel="stylesheet" href="/common styles/footer.css">
-
-        <style>
-            .title-section{
-                display: grid;
-                grid-template-columns: 50% 50%;
-                column-gap: 40px;
-                align-items: center;
-                justify-content: center;
-                padding-top: 50px;
-                padding-bottom: 50px;
-            }
-
-            .profile-pic-div {
-                display:flex;
-                justify-content: center;
-            }
-
-            .title-profile-pic {
-                max-width: 350px;
-                margin-right: 0px;
-            }
-
-            .profile-intro-section {
-                display:flex;
-                flex-direction: column;
-            }
-
-            h1 {
-                margin-left: 0px;
-                color: antiquewhite;
-                text-align: left;
-                font-size: xx-large;
-                letter-spacing: 2px;
-                width: fit-content;
-            }
-
-            .title-text-2 {
-                margin-left: 5px;
-            }
-
-            .title-text-3 {
-                margin-left: 10px;
-            }
-
-            .profile-underscript {
-                color: rgb(173, 163, 148);
-                margin-top: 20px;
-                margin-left: 15px;
-            }
-
-        </style>
-
     </head>
+
     <body 
         style="background-color: #121212;
             margin-top: 0px;
@@ -91,30 +40,6 @@
             </div>
             
         </header>
-
-        <div class="title-section">
-            <div class="profile-pic-div">
-                <img 
-                class="title-profile-pic"
-                src="/website images/home/mb_profile_pic.png" 
-                alt="A profile photo of MegaBytten, also known as Ethan de Villiers"
-            >
-            </div>
-
-            <div class="profile-intro-section">
-                <h1>
-                    <strong>
-                        Jr.<br>
-                        <span class="title-text-2">Solutions<br></span>
-                        <span class="title-text-3">Architect<br></span>
-                    </strong>
-                </h1>
-
-                <span class="profile-underscript">
-                    Ethan de Villiers
-                </span>
-            </div>
-        </div>
 
         <footer class="footer">
             <p class="footer-site-title">
@@ -153,5 +78,4 @@
             </div>
         </footer>
     </body>
-
 </html>
