--- a/public/home/home.html
+++ b/public/home/home.html
@@ -61,7 +61,7 @@
         style="background-color: #121212;
             margin-top: 0px;
             margin-bottom: 0px;
-            padding: 20px;
+            padding: 20px;"
     >
         <header>
             <div class="header">
