--- a/public/home/home.html
+++ b/public/home/home.html
@@ -59,9 +59,7 @@
     </head>
     <body 
         style="background-color: #121212;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            padding: 20px;"
+            padding: auto;"
     >
         <header>
             <div class="header">
