--- a/public/home/home.html
+++ b/public/home/home.html
@@ -59,7 +59,8 @@
     </head>
     <body 
         style="background-color: #121212;
-            padding: auto;"
+            padding-left: 10px;
+            padding-right: 5px;"
     >
         <header>
             <div class="header">
