--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -39,7 +39,7 @@
                           <a href="/eutrc.app">APP</a>
                           <a href="/eutrcapp">About</a>
                           <a href="/eutrcapp#downloads">Downloads</a>
-                          <a href="/eutrcapp/privacy">Privacy Policy</a>
+                          <a href="/eutrcapp/privacy-policy">Privacy Policy</a>
                         </div>
                       </div>
                 </div>
