privacy policy update

--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -209,12 +209,20 @@
                     class="footer-logo-icon">
                 </a>
                 
-                <a href="/eutrcapp">
-                    <img 
-                    src="/website images/eutrc app/playstoreicon.png" 
-                    alt="The Feature Graphic of Touch Training Tracker"
-                    class="footer-ttt-icon">
-                </a>
+                <div class="footer-eutrcapp-subsection">
+                    <a href="/eutrcapp">
+                        <img 
+                        src="/website images/eutrc app/playstoreicon.png" 
+                        alt="The Feature Graphic of Touch Training Tracker"
+                        class="footer-ttt-icon">
+                    </a>
+                    <a 
+                        href="/eutrcapp/privacy-policy" 
+                        class="footer-privacy-link"
+                    >
+                        Privacy Policy
+                    </a>
+                </div>
                 
             </div>
         </footer>
