--- a/public/eutrcapp/privacy-policy.html
+++ b/public/eutrcapp/privacy-policy.html
@@ -4,6 +4,67 @@
         <title>Privacy Policy</title>
         <link rel="stylesheet" href="/common styles/header.css">
         <link rel="stylesheet" href="/common styles/footer.css">
+
+        <style>
+            h1 {
+                text-align: center;
+                color: beige;
+            }
+
+            .intro-section {
+                padding-top: 20px;
+                padding-left: 20px;
+                padding-bottom: 20px;
+                margin-bottom: 20px;
+                background-color: rgb(28, 28, 28);
+            }
+
+            h2 {
+                margin: 0px;
+                color: rgb(225, 225, 200);
+            }
+
+            .date {
+                margin-top: 10px;
+                margin-left: 20px;
+                margin-bottom: 10px;
+                color: rgb(215, 215, 190);
+                font-style: italic;
+            }
+
+            p {
+                font-family: Arial, Helvetica, sans-serif;
+                color: rgb(180, 180, 165);
+            }
+
+            /* Style the button that is used to open and close the collapsible content */
+            .collapsible {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+            }
+
+            /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+            .active, .collapsible:hover {
+            background-color: #ccc;
+            }
+
+            /* Style the collapsible content. Note: hidden by default */
+            .content {
+            padding: 0 18px;
+            display: none;
+            overflow: hidden;
+            background-color: #f1f1f1;
+            }
+
+        </style>
+
     </head>
 
     <body 
@@ -41,6 +102,47 @@
             
         </header>
 
+        <h1>Privacy Policy</h1>
+
+        
+
+        <div class="intro-section">
+            <h2>Mega-privacy policy</h2>
+            <p class="date">Updated September 10th, 2022</p>
+
+            <p>This privacy policy describes how the MegaBytten network of software collects and uses your personal data. In the final sections of this privacy policy, I advise you on security warnings to consider when using and/or interacting with the MegaBytten software.</p>
+            <p>It is assumed that all users of MegaBytten software have read, understand and agree with the information in this policy prior to using any software.</p>
+            <p>If you have any questions regarding data usage, or the software itself, please feel free to 
+                <a href=/home#contact-us>contact me</a> via <a href=“mailto:omegabytten@gmail.com">email</a> or <a href="https://discordapp.com/users/megabytten#6788">discord</a> </p>   
+        </div>
+
+        <button type="button" class="collapsible">Open Collapsible</button>
+        <div class="content">
+        <p>Lorem ipsum...</p>
+        </div>
+
+
+        <!-- 
+            this script cycles through all collapsible elements
+            checks if they were clicked 
+            then opens clicked 
+        -->
+        <script>
+            var coll = document.getElementsByClassName("collapsible");
+            var i;
+            for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.display === "block") {
+                content.style.display = "none";
+                } else {
+                content.style.display = "block";
+                }
+            });
+            }
+        </script>
+
         <footer class="footer">
             <p class="footer-site-title">
                 MegaBytten.org
@@ -69,7 +171,7 @@
                         class="footer-ttt-icon">
                     </a>
                     <a 
-                        href="/eutrcapp/privacy" 
+                        href="/eutrcapp/privacy-policy" 
                         class="footer-privacy-link"
                     >
                         Privacy Policy
