--- a/public/home/home.html
+++ b/public/home/home.html
@@ -143,7 +143,7 @@
                         class="footer-ttt-icon">
                     </a>
                     <a 
-                        href="/eutrcapp/privacy" 
+                        href="/eutrcapp/privacy-policy" 
                         class="footer-privacy-link"
                     >
                         Privacy Policy
