--- a/public/eutrcapp/privacy-policy.html
+++ b/public/eutrcapp/privacy-policy.html
@@ -37,6 +37,12 @@
                 color: rgb(180, 180, 165);
             }
 
+            .link {
+                color: bisque;
+                text-decoration: underline;
+                text-underline-offset: 2px;
+            }
+
             /* Style the button that is used to open and close the collapsible content */
             .collapsible {
             background-color: #eee;
@@ -113,7 +119,7 @@
             <p>This privacy policy describes how the MegaBytten network of software collects and uses your personal data. In the final sections of this privacy policy, I advise you on security warnings to consider when using and/or interacting with the MegaBytten software.</p>
             <p>It is assumed that all users of MegaBytten software have read, understand and agree with the information in this policy prior to using any software.</p>
             <p>If you have any questions regarding data usage, or the software itself, please feel free to 
-                <a href=/home#contact-us>contact me</a> via <a href="mailto:omegabytten@gmail.com">email</a> or <a href="https://discordapp.com/users/megabytten#6788">discord</a> </p>   
+                <a class="link" href=/home#contact-us>contact me</a> via <a class="link" href="mailto:omegabytten@gmail.com">email</a> or <a class="link" href="https://discordapp.com/users/megabytten#6788">discord</a> </p>   
         </div>
 
         <button type="button" class="collapsible">Open Collapsible</button>
