--- a/public/eutrcapp/privacy-policy.html
+++ b/public/eutrcapp/privacy-policy.html
@@ -233,7 +233,7 @@
 
         <div 
             class="intro-section"
-            style="margin-top:20px ;"
+            style="margin-top:20px; margin-bottom: 80px;"
         >
             <h2>
                 AGREEMENT
