--- a/public/eutrcapp/privacy-policy.html
+++ b/public/eutrcapp/privacy-policy.html
@@ -17,7 +17,7 @@
                 padding-right: 20px;
                 padding-left: 20px;
                 padding-bottom: 20px;
-                margin-bottom: 20px;
+                margin-bottom: 100px;
                 background-color: rgb(28, 28, 28);
             }
 
@@ -48,6 +48,7 @@
             .info-section {
                 width: 100%;
                 padding-right: 20px;
+                margin-bottom: 100px;
             }
 
             /* Style the button that is used to open and close the collapsible content */
@@ -233,7 +234,7 @@
 
         <div 
             class="intro-section"
-            style="margin-top:20px; margin-bottom: 80px;"
+            style="margin-top:20px;"
         >
             <h2>
                 AGREEMENT
