--- a/public/eutrcapp/privacy-policy.html
+++ b/public/eutrcapp/privacy-policy.html
@@ -5,99 +5,7 @@
         <link rel="stylesheet" href="/common styles/header.css">
         <link rel="stylesheet" href="/common styles/footer.css">
 
-        <style>
-            h1 {
-                text-align: center;
-                color: beige;
-            }
-
-            .intro-section {
-                width: 100%;
-                padding-top: 20px;
-                padding-right: 20px;
-                padding-left: 20px;
-                padding-bottom: 20px;
-                margin-bottom: 100px;
-                background-color: rgb(28, 28, 28);
-            }
-
-            h2 {
-                margin: 0px;
-                color: rgb(225, 225, 200);
-            }
-
-            .date {
-                margin-top: 10px;
-                margin-left: 20px;
-                margin-bottom: 10px;
-                color: rgb(215, 215, 190);
-                font-style: italic;
-            }
-
-            p {
-                font-family: Arial, Helvetica, sans-serif;
-                color: rgb(180, 180, 165);
-            }
-
-            .link {
-                color: bisque;
-                text-decoration: underline;
-                text-underline-offset: 2px;
-            }
-
-            .info-section {
-                width: 100%;
-                padding-right: 20px;
-                margin-bottom: 100px;
-            }
-
-            /* Style the button that is used to open and close the collapsible content */
-            .collapsible {
-            background-color: transparent;
-            color: bisque;
-            cursor: pointer;
-            
-            padding-top: 20px;
-            padding-bottom: 20px;
-            padding-left: 20px;
-
-            margin-left: 20px;
-            width: 100%;
-            
-            border-top: 2px;
-            border-bottom: 2px;
-            border-left: 0px;
-            border-right: 0px;
-            border-style: solid;
-
-
-            text-align: left;
-            outline: none;
-            font-size: 20px;
-            }
-
-            /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-            .active, .collapsible:hover {
-                background-color:#343333;
-            }
-
-            /* Style the collapsible content. Note: hidden by default */
-            .content {
-            border: 0px;
-            margin-left: 20px;
-            margin-bottom: 20px;
-            padding-left: 5px;
-            width: 100%;
-
-            border-style: solid;
-            color: bisque;
-
-            display: none;
-            overflow: hidden;
-            background-color: #121212;;
-            }
-
-        </style>
+        <link rel="stylesheet" href="/eutrcapp/privacy-policy.css">
 
     </head>
 
