--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -12,7 +12,8 @@
         style="background-color: #121212;
             margin-top: 0px;
             margin-bottom: 0px;
-            width: 100%;"
+            padding-left: 5px;
+            padding-right: 20px;"
     >
         <header>
             <div class="header">
