--- a/public/eutrc/app/signin/signin.html
+++ b/public/eutrc/app/signin/signin.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: black;
+            background-image: url('/website images/eutrc app/MegaBytten_background.png');
             padding-top: 100px;
             padding-left: 5px;
             padding-left: 5px;
