title color change

--- a/public/eutrc/app/signin/signin.html
+++ b/public/eutrc/app/signin/signin.html
@@ -30,7 +30,7 @@
             margin-top: 20px;
             margin-bottom: 10px;
             text-align: center;
-            color: rgb(50, 50, 50);
+            color: black;
         }
 
         h2 {
