--- a/public/eutrc/app/signin/signin.html
+++ b/public/eutrc/app/signin/signin.html
@@ -94,7 +94,7 @@
 
     <div class="signin-container">
 
-        <form class="signin-form" action="/eutrcapp/login">
+        <form class="signin-form" action="/eutrcapp/login" method="post">
             <text>Email</text> <br>
             <input class="signin-element" type="email" id="email" name="email" placeholder="@exeter.ac.uk">
             <text>Password</text> <br>
