--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -37,7 +37,7 @@
                             EUTRC App
                         </button>
                         <div class="dropdown-content">
-                          <a href="/eutrc.app">APP</a>
+                          <a href="/eutrc/app/signin">APP</a>
                           <a href="/eutrcapp">About</a>
                           <a href="/eutrcapp#downloads">Downloads</a>
                           <a href="/eutrcapp/privacy-policy">Privacy Policy</a>
