--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -54,7 +54,7 @@
         </h1>
 
         <div class="app-gallery">
-            <a href="/eutrc.app">
+            <a href="/eutrc/app/signin">
                 <img class="app-logo" src="/website images/eutrc app/playstoreicon.png" alt="The EUTRC App Logo">
             </a>
             <a class="webapp-redirect-text" href="/eutrc.app">
