--- a/public/home/home.html
+++ b/public/home/home.html
@@ -31,7 +31,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">EUTRC App</button>
                         <div class="dropdown-content">
-                          <a href="/eutrc.app">APP</a>
+                          <a href="/eutrc/app/signin">APP</a>
                           <a href="/eutrcapp">About</a>
                           <a href="/eutrcapp#downloads">Downloads</a>
                           <a href="/eutrcapp/privacy-policy">Privacy Policy</a>
