--- a/public/eutrc/app/signin/signin.html
+++ b/public/eutrc/app/signin/signin.html
@@ -85,12 +85,8 @@
     </div>
 
     <h1>
-        Touch Training Tracker
+        EUTRC APP Sign in
     </h1>
-
-    <h2>
-        Sign In
-    </h2>
 
     <div class="signin-container">
 
