black --> dark grey

--- a/public/eutrcapp/about.html
+++ b/public/eutrcapp/about.html
@@ -9,7 +9,7 @@
 
     </head>
     <body 
-        style="background-color: #121212;
+        style="background-color: rgb(25,25,25);
             margin-top: 0px;
             margin-bottom: 0px;
             padding-left: 5px;
