--- a/public/home/home.html
+++ b/public/home/home.html
@@ -9,7 +9,7 @@
 
     </head>
     <body 
-        style="background-color: #121212;
+        style="background-color: rgb(25,25,25);
             padding-left: 5px;
             padding-right: 20px;"
     >
