added loop to video

--- a/public/eutrcapp/slides/32/0.html
+++ b/public/eutrcapp/slides/32/0.html
@@ -72,7 +72,7 @@
                     </ul>
                 </div>
                 <div class="video-container">
-                    <video controls autoplay muted
+                    <video controls autoplay muted loop
                     class="move-videos"
                     src="/website images/eutrc app/moves/move_32_short.mp4"
                     type="video/mp4"
